--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 	font-size: 17px;
 	font-weight: lighter;
 	line-height: 25px;
-	background-image: url(images/a.jpg);
+	background-image: url(images/b.jpg);
 	background-size: cover;
 	background-position: center;
 }
@@ -56,6 +56,7 @@ a:hover {
 .box-white:hover {
 	background: rgba(240,240,240,0.5);
 	font-size: 20px;
+	color: white;
 }
 
 
