--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 	font-size: 17px;
 	font-weight: lighter;
 	line-height: 25px;
-	background-image: url(images/69515084_2420711781537970_2510929230901018624_o.jpg);
+	background-image: url(images/b.jpg);
 	background-size: cover;
 	background-position: center;
 }
